fix skills white space

--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,7 @@ p {
 .section h2 {
   padding-bottom: 5px;
 }
+
+.skills {
+  white-space: pre;
+}
